--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -57,19 +57,19 @@ $font-secondary: 'Koulen', sans-serif;
 
 @media (min-width: 630px) {
     #hero {
-        background-position: bottom 18px right 100px;
+        background-position: bottom 16px right 100px;
     }
 }
 
 @media (min-width: 680px) {
     #hero {
-        background-position: bottom 23px right 100px;
+        background-position: bottom 20px right 100px;
     }
 }
 
 @media (min-width: 744px) {
     #hero {
-        padding: 200px 132px 184px 132px;
+        padding: 192px 132px 184px 132px;
         margin: 0 -100px 0 -100px;
         background-image: url("../immagini/bg_hero_tablet.png");
         background-repeat: no-repeat;
@@ -101,14 +101,14 @@ $font-secondary: 'Koulen', sans-serif;
 @media (min-width: 970px) {
     #hero {
         padding-bottom: 136px;
-        background-position: bottom 14px right 100px;
+        background-position: bottom 12px right 100px;
     }
 }
 
 @media (min-width: 1040px) {
     #hero {
         padding-bottom: 148px;
-        background-position: bottom 18px right 100px;
+        background-position: bottom 16px right 100px;
     }
 }
 
